SFDCProject/src/objects/Service_Contract_Event__c.object
<CustomObject>
    <fields>
        <fullName>Facility_Design_Approved__c</fullName>
        <label>Facility Design Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Call_Status__c</fullName>
        <label>Final Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1 - Call/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 4 - Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Call__c</fullName>
        <label>Final Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Completion_Date__c</fullName>
        <label>Final Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Scheduled__c</fullName>
        <label>Final Inspection Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Signoff__c</fullName>
        <label>Final Inspection Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Rebate_Amount__c</fullName>
        <label>Final Rebate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Call_Completed_Date__c</fullName>
        <description>Holds value of the date on which the first call with client was placed</description>
        <label>First Call Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Amt_Applied_For__c</fullName>
        <formula>Service_Contract__r.Transfer_Price__c *0.3</formula>
        <label>Grant Amt Applied For</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Amt_Rec_d__c</fullName>
        <label>Grant Amt Rec&apos;d</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Date__c</fullName>
        <label>Grant Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Number__c</fullName>
        <label>Grant Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Rec_d_Date__c</fullName>
        <label>Grant Rec&apos;d Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIC_Approved__c</fullName>
        <label>HIC Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIC_Status__c</fullName>
        <label>HIC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested from builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HOA_Application_Submitted_Date__c</fullName>
        <label>HOA Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Approved__c</fullName>
        <label>HOA Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Name__c</fullName>
        <label>HOA Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Status__c</fullName>
        <label>HOA Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <label>HOA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - attached home / single-family condo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_PTO_Letter__c</fullName>
        <formula>TEXT(Service_Contract__r.Have_PTO_Letter__c)</formula>
        <label>Have PTO Letter?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <formula>Service_Contract__r.Home_Address__c + &quot;, &quot; + 
Service_Contract__r.City__c + &quot;, &quot; + 
Service_Contract__r.State__c + &quot; &quot; + 
Service_Contract__r.Zip_Formula__c</formula>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IIQ_Number__c</fullName>
        <label>IIQ Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Amount_Received__c</fullName>
        <label>Initial Deposit Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Amount__c</fullName>
        <label>Initial Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Method__c</fullName>
        <label>Initial Deposit Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid to REC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Deposit_Processed__c</fullName>
        <label>Initial Deposit Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Complete_Call__c</fullName>
        <label>Installation Complete Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <formula>TEXT(Service_Contract__r.Installation_Type__c)</formula>
        <label>Installation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnect_App_Complete__c</fullName>
        <label>Preliminary App Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Posted_Online__c</fullName>
        <label>Invoice Posted Online</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTC_Payment_Amount__c</fullName>
        <label>LTC Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTC_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTC Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_system_NTP_form__c</fullName>
        <formula>Service_Contract__r.Large_system_NTP_form__c</formula>
        <label>Large system NTP form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Approval_Start__c</fullName>
        <label>Layout Approval Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Rcvd__c</fullName>
        <label>Layout Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Service_Contract__r.Opportunity__r.Lead_Source_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Date__c</fullName>
        <label>Lease Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Final_Sent__c</fullName>
        <label>Local Rebate Final Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Received__c</fullName>
        <label>Local Rebate Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Reservation_Sent__c</fullName>
        <label>Local Rebate Reservation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Rebate_Signed__c</fullName>
        <label>Local Rebate Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M0_Clawback_Date__c</fullName>
        <description>this field is populated by a trigger when certain criteria are met</description>
        <label>M0 Clawback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M0_Credit_Amount__c</fullName>
        <label>M0 Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M0_Credit_Memo_Applied_On__c</fullName>
        <label>M0 Credit Memo Applied On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>M0_Payment_Date__c</fullName>
        <label>M0 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M0_Payment__c</fullName>
        <formula>VALUE(TEXT(M0_Terms__c)) * (Service_Contract__r.EPC_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M0 Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M0_Proof_Date__c</fullName>
        <label>M0 Proof Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M0_Terms__c</fullName>
        <label>M0 Terms</label>
        <picklist>
            <controllingField>Utility_Classification__c</controllingField>
            <picklistValues>
                <fullName>0.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.20</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M0_amount_paid__c</fullName>
        <label>M0 amount paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Denied_Comments__c</fullName>
        <label>M1 Denied Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>M1_Deposit_Acct__c</fullName>
        <label>M1 Deposit Acct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1_Deposit__c</fullName>
        <label>M1 Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Payment__c</fullName>
        <formula>CASE 
(1,
IF(OR(PTO__c &gt;= Date(2015,02,17), ISBLANK(PTO__c)) ,1,0),Service_Contract__r.Estimated_GAAP_Cost__c * M1_Terms__c, IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;Sunrun&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M1_Terms__c, 
IF(Service_Contract__r.Install_Partner__c = &apos;Mercury Solar&apos;,1,0),(Service_Contract__r.EPC_Price__c- Initial_Deposit_Amount__c )* M1_Terms__c , 
IF(CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Solar&quot;),1,0),M1_Terms__c , 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c * 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
Service_Contract__r.EPC_Price__c* M1_Terms__c -Initial_Deposit_Amount__c, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;UR Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c* 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c * 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
Service_Contract__r.EPC_Price__c* M1_Terms__c -Initial_Deposit_Amount__c, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Electric&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;)), Service_Contract__r.Partner_Financed__c = TRUE),1,0), Service_Contract__r.EPC_Price__c * 0, 
IF(and((CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;Trinity Solar&quot;)),(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M1_Terms__c, 
Service_Contract__r.EPC_Price__c* M1_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Proof_Count__c</fullName>
        <label>M1 Proof Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Proof_Upload_Date__c</fullName>
        <label>M1 Proof Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_Status__c</fullName>
        <label>M1 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M1_Terms__c</fullName>
        <formula>Service_Contract__r.M1_Terms__c</formula>
        <label>M1 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_amount_paid__c</fullName>
        <label>M1 amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_payment_date__c</fullName>
        <label>M1 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_proof_panel_inverter_delivery__c</fullName>
        <label>M1 proof: panel/inverter delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Denied_Comments__c</fullName>
        <label>M2 Denied Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>M2_Payment__c</fullName>
        <formula>CASE 
(1, 
IF(OR(PTO__c &gt;= Date(2015,02,17), ISBLANK(PTO__c)) ,1,0),Service_Contract__r.Estimated_GAAP_Cost__c * M2_Terms__c,
IF(and(Service_Contract__r.Install_Partner__c =&apos;Sunrun&apos;,(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M2_Terms__c, 
IF(Service_Contract__r.Install_Partner__c = &apos;Mercury Solar&apos;,1,0),(Service_Contract__r.EPC_Price__c- Initial_Deposit_Amount__c )* M2_Terms__c, 
IF(CONTAINS(Service_Contract__r.Install_Partner_Id__r.Name,&quot;American Solar&quot;),1,0), (Service_Contract__r.EPC_Price__c* M2_Terms__c)-M1_Terms__c, 


IF(and(M1_Payment__c = 0,M1_Terms__c&lt;&gt;0),1,0), 0, 


IF(and(Service_Contract__r.Install_Partner__c = &apos;Trinity Solar&apos;,(ISPICKVAL( Initial_Deposit_Method__c ,&quot;Paid to Partner&quot;))),1,0), 
(Service_Contract__r.EPC_Price__c-Initial_Deposit_Amount__c)*M2_Terms__c, 
Service_Contract__r.EPC_Price__c* M2_Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Proof_Count__c</fullName>
        <label>M2 Proof Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_Proof_Upload_Date__c</fullName>
        <label>M2 Proof Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Status__c</fullName>
        <label>M2 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>M2_Terms__c</fullName>
        <formula>Service_Contract__r.M2_Terms__c</formula>
        <label>M2 Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_amount_paid__c</fullName>
        <label>M2 amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_month__c</fullName>
        <label>M2 month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_payment_date__c</fullName>
        <label>M2 payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_proof_substantial_completion__c</fullName>
        <label>M2 proof: substantial completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_Denied_Comments__c</fullName>
        <label>M3 Denied Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>M3_Proof_Count__c</fullName>
        <label>M3 Proof Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Proof_Upload_Date__c</fullName>
        <label>M3 Proof Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_Status__c</fullName>
        <label>M3 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Panel_Size_Amps__c</fullName>
        <label>Main Panel Size Amps</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>275</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (put in notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <formula>TEXT(Service_Contract__r.Marked_For_Deletion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marked For Deletion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Registration_Date__c</fullName>
        <label>Meter Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Test_Date__c</fullName>
        <label>Meter Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NEM_Obligation_Met_Date__c</fullName>
        <label>NEM Obligation Met Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NEM_Period__c</fullName>
        <formula>CASE(MOD( DATEVALUE( NEM_Submitted_Date__c)- DATE(1985,6,24),7), 
  0 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Utility_Response_Date__c- DATEVALUE( NEM_Submitted_Date__c))/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NEM Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEM_Submitted_Date__c</fullName>
        <description>Ops Field: BSKY-4273</description>
        <inlineHelpText>Defaults to Customer Sign Off date.</inlineHelpText>
        <label>NEM Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NTP_Granted__c</fullName>
        <label>NTP Granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NTP_Requested__c</fullName>
        <label>NTP Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NYSERDA_Reported__c</fullName>
        <label>UCC One Off Removal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Action_Owner__c</fullName>
        <label>ISM Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Alexandra Bargman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alisha Kahle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Lamin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gawain Harman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Trevor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justin Montante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karlie Nieto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nick Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Felicia Dang</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_from_Partner__c</fullName>
        <label>Notes from Partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_to_Partner__c</fullName>
        <label>Notes to Partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Customer_of_Web_Acct__c</fullName>
        <label>Notify Customer of Web Acct</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Photos_Uploaded__c</fullName>
        <formula>Service_Contract__r.Number_of_Photos_Uploaded__c</formula>
        <label>Number of Photos Uploaded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_End_Date__c</fullName>
        <label>On Hold End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Hold_Start_Date__c</fullName>
        <label>On Hold Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_Id__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Service_Contract__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_DC_Watts__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.Oracle_DC_Watts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle DC Watts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Opportunity_Close_Date__c</fullName>
        <label>Oracle Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Created_By__c</fullName>
        <formula>Service_Contract__r.Opportunity__r.Oracle_Project_Created_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Revenue_Amount__c</fullName>
        <label>Oracle Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Full_System_Cost__c</fullName>
        <formula>Service_Contract__r.Original_Full_System_Cost__c</formula>
        <label>Original Full System Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Price_per_kWh__c</fullName>
        <formula>Service_Contract__r.Original_Price_per_kWh__c</formula>
        <label>Original Price per kWh</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Rebate_Estimate__c</fullName>
        <label>Original Rebate Estimate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Upfront_Payment_Amount__c</fullName>
        <label>Original Upfront Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Upfront_Payment__c</fullName>
        <label>Original Upfront Payment</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_yr_1_gen__c</fullName>
        <formula>Service_Contract__r.Original_Yr_1_Gen__c</formula>
        <label>Original yr 1 gen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Rebate_Reference__c</fullName>
        <label>Other Rebate Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Stamp_Ordered__c</fullName>
        <label>PE Stamp Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PE_Stamp_Received__c</fullName>
        <label>PE Stamp Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PE_Stamp_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PE Stamp Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO#</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Notes__c</fullName>
        <description>BSKY-4637</description>
        <label>PP Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PTO_Recorded_Date__c</fullName>
        <label>PTO Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO__c</fullName>
        <label>PTO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PUC_Filed__c</fullName>
        <label>PUC Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PUC_One_Off_Removal__c</fullName>
        <label>PUC One-Off Removal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parcel_Number__c</fullName>
        <label>Parcel Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Office__c</fullName>
        <formula>Service_Contract__r.Partner_Office__r.Name</formula>
        <label>Partner Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_PTO_proof_date__c</fullName>
        <label>Partner PTO proof date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_to_Retailer__c</fullName>
        <label>Payment to Retailer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Approval_Date__c</fullName>
        <label>Permit Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Expected_Date__c</fullName>
        <label>Permit Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Follow_Up_Date__c</fullName>
        <label>Permit Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Jurisdiction_municipality__c</fullName>
        <label>Permit Jurisdiction (municipality)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Number__c</fullName>
        <label>Permit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Submitted_Date__c</fullName>
        <label>Permit Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Photo_Upload_Verified__c</fullName>
        <label>Photo Upload Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Placed_in_Service_Date__c</fullName>
        <label>ITC Eligibility Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plans_Completed_Date__c</fullName>
        <label>Plans Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plans_Reviewed_Date__c</fullName>
        <label>Plans Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_M2_Call_Last_Attempt__c</fullName>
        <description>This field should be available when we navigate to the Service Contract Event record</description>
        <label>Post M2 Call Last Attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_M2_Call_Status__c</fullName>
        <description>This field should be available when we navigate to service contract event record</description>
        <label>Post M2 Call Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reached Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prepayment_Amount__c</fullName>
        <formula>Service_Contract__r.Prepay_Amount__c</formula>
        <label>Prepayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepayment_Date__c</fullName>
        <label>Prepayment Date</label>
        <type>Date</type>
    </fields>
</CustomObject>